Changed css styles

--- a/app/views/form.erb
+++ b/app/views/form.erb
@@ -7,7 +7,7 @@
 <div class="container">
 	<form id="start" action="/" method="post">
 		<div class="header">
-			<h3>Find Out What Your Numerology Number Is!</h3>
+			<h3>What Is Your Numerology Number?</h3>
 				<% if !@error.nil? %>
 				  <p class="error"><%= @error %></p>
 				<% end %>
