--- a/app/views/people/index.erb
+++ b/app/views/people/index.erb
@@ -1,6 +1,7 @@
   <h1>People</h1>
   <p> If you don't see a person listed here you can add them <a href="/people/new">here</a>.
-  <table>
+  
+  <table id="people">
     <thead>
       <th>Name</th>
       <th>Birthdate</th>
